karnc/tests/fixtures/negative/79_alias_used_twice/src/commerce/orders.karn
context commerce.orders

consumes commerce.payment as Foo
consumes commerce.shipping as Foo
